# rustnet

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  CONTRIBUTORS.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.static  EBPF_BUILD.md  INSTALL.md  INSTALL.zh-CN.md  MUSL_BUILD.md  PROFILING.md  PROFILING.zh-CN.md  README.ja.md  README.md  README.zh-CN.md  RELEASE.md  ROADMAP.md  SECURITY.md  SECURITY.zh-CN.md  USAGE.md  USAGE.zh-CN.md  build.rs  demo.tape  deny.toml  screenshots.tape
.cargo/: android-ebpf-config.toml  audit.toml
.github/: PPA_SETUP.md  dependabot.yml  pull_request_template.md
.github/actions/build-rustnet/: action.yml
.github/actions/build-static/: action.yml
.github/actions/setup-linux-deps/: action.yml
.github/actions/upload-artifact-retry/: action.yml
.github/workflows/: aur-update.yml  build-android-static.yml  build-musl-arm64.yml  build-platforms.yml  copr-update-spec.yml  docker.yml  obs-release.yml  ppa-release.yml  publish.yml  release.yml  rust.yml  security.yml  test-freebsd.yml  test-platform-builds.yml  test-static-build.yml  test-static-builds.yml  update-oui.yml
assets/: services
assets/locales/: de.yml  en.yml  es.yml  fr.yml  ru.yml  zh.yml
benches/: connection_merge.rs  packet_parsing.rs  rate_tracker.rs  snapshot.rs  tracker_ingest.rs
crates/rustnet-capture/: Cargo.toml  README.md
crates/rustnet-capture/src/: lib.rs
crates/rustnet-core/: Cargo.toml  README.md
crates/rustnet-core/src/: lib.rs
crates/rustnet-core/src/network/: bogon.rs  interface_stats.rs  local_addresses.rs  merge.rs  mod.rs  parser.rs  process_activity.rs  services.rs  tracker.rs  types.rs
crates/rustnet-core/src/network/dpi/: bittorrent.rs  cipher_suites.rs  dns.rs  ftp.rs  http.rs  https.rs  mdns.rs  mod.rs  mqtt.rs  netbios.rs  quic.rs  snmp.rs  ssh.rs  stun.rs
crates/rustnet-core/src/network/link_layer/: ethernet.rs  linux_sll.rs  pktap.rs  tun_tap.rs
crates/rustnet-core/src/network/protocol/: icmp.rs  igmp.rs  mod.rs  tcp.rs  udp.rs
crates/rustnet-host/: Cargo.toml  README.md  build.rs
crates/rustnet-host/src/: lib.rs
crates/rustnet-host/src/freebsd/: mod.rs  process.rs
crates/rustnet-host/src/linux/: enhanced.rs  mod.rs  process.rs
crates/rustnet-host/src/linux/ebpf/: loader.rs  maps_libbpf.rs  mod.rs  tracker_libbpf.rs
crates/rustnet-host/src/linux/ebpf/programs/: socket_tracker.bpf.c
crates/rustnet-host/src/macos/: mod.rs  process.rs
crates/rustnet-host/src/windows/: etw.rs  mod.rs  process.rs
debian/: README.md  changelog  control  copyright  install  postinst  rules  rustnet.lintian-overrides
debian/source/: options
docs/: ebpf-integration.md
examples/: k8s_resolver_check.rs
i18n/: en.yml  fr.yml
resources/packaging/linux/: rustnet.desktop
resources/packaging/macos/: Info.plist  wrapper.sh
rpm/: rustnet.spec
scripts/: cargo-android.sh  check-locales.py  clear_old_logs.sh  debug-attribution.sh  pcap_enrich.py  pre-release-check.sh  record-rustnet-demo.sh  test-deb-build.sh
selinux/: Makefile  README.md  TESTING.md  rustnet.fc  rustnet.te
src/: Cargo.toml  app.rs  cli.rs  config.rs  filter.rs  i18n.rs  lib.rs  main.rs  ui.rs
src/export/: mod.rs  pcapng.rs
src/network/: capture.rs  dns.rs  dns_attribution.rs  geoip.rs  interface_stats.rs  kubernetes.rs  linux.rs  macos.rs  merge.rs  mod.rs  oui.rs  parser.rs  pktap.rs  privileges.rs  services.rs  types.rs  windows.rs
src/network/dpi/: bittorrent.rs  cipher_suites.rs  dhcp.rs  dns.rs  ftp.rs  http.rs  https.rs  imap.rs  llmnr.rs  mdns.rs  mod.rs  mqtt.rs  netbios.rs  ntp.rs  quic.rs  sip.rs  smtp.rs  snmp.rs  ssdp.rs  ssh.rs  stun.rs  tls.rs
src/network/link_layer/: ethernet.rs  linux_sll.rs  mod.rs  pktap.rs  raw_ip.rs  tun_tap.rs
src/network/platform/: freebsd.rs  freebsd_interface_stats.rs  linux.rs  linux_enhanced.rs  linux_interface_stats.rs  macos.rs  macos_interface_stats.rs  mod.rs  windows.rs  windows_interface_stats.rs
src/network/protocol/: icmp.rs  igmp.rs  mod.rs  tcp.rs  udp.rs  udp_lite.rs
src/snapshots/: rustnet_monitor__ui__snapshot_tests__details_tab_tcp_https.snap  rustnet_monitor__ui__snapshot_tests__filter_input_mode_active_empty.snap  rustnet_monitor__ui__snapshot_tests__filter_input_persisted.snap  rustnet_monitor__ui__snapshot_tests__status_bar_clear_confirmation.snap  rustnet_monitor__ui__snapshot_tests__status_bar_overview_default.snap  rustnet_monitor__ui__snapshot_tests__tabs_bar_overview_active.snap
src/ui/: actions.rs  clipboard.rs  component.rs  connection_table.rs  effects.rs  format.rs  mod.rs  sorting.rs  state.rs  terminal.rs  theme.rs
src/ui/snapshots/: rustnet_monitor__ui__snapshot_tests__activity_interface_details.snap  rustnet_monitor__ui__snapshot_tests__activity_tab_process_egress.snap  rustnet_monitor__ui__snapshot_tests__activity_tab_process_ingress.snap  rustnet_monitor__ui__snapshot_tests__details_tab_tcp_https.snap  rustnet_monitor__ui__snapshot_tests__filter_input_mode_active_empty.snap  rustnet_monitor__ui__snapshot_tests__filter_input_mode_active_with_text.snap  rustnet_monitor__ui__snapshot_tests__filter_input_persisted.snap  rustnet_monitor__ui__snapshot_tests__graph_tab_empty_history.snap  rustnet_monitor__ui__snapshot_tests__help_tab.snap  rustnet_monitor__ui__snapshot_tests__interfaces_tab.snap  rustnet_monitor__ui__snapshot_tests__loading_screen.snap  rustnet_monitor__ui__snapshot_tests__loading_screen_via_app.snap  rustnet_monitor__ui__snapshot_tests__overview_live_connections.snap  rustnet_monitor__ui__snapshot_tests__overview_process_aggregate.snap  rustnet_monitor__ui__snapshot_tests__status_bar_activity_tab.snap  rustnet_monitor__ui__snapshot_tests__status_bar_details_tab.snap  rustnet_monitor__ui__snapshot_tests__status_bar_filtered.snap  rustnet_monitor__ui__snapshot_tests__status_bar_help_tab.snap  rustnet_monitor__ui__snapshot_tests__status_bar_overview_default.snap  (+4 more)
src/ui/tabs/: activity.rs  details.rs  graph.rs  help.rs  (+3 more)
tests/: integration_tests.rs  kubernetes_resolver_live.rs
(+47 files in other folders)
