[package]
name = "rustnet-core"
version = "0.1.0"
authors = ["domcyrus"]
edition = "2024"
rust-version = "1.88.0" # Let-chains require Rust 1.88.0+
description = "Network analysis library: packet parsing, protocol types, deep packet inspection, link-layer parsers, connection merging, and DNS/GeoIP/OUI lookups — the reusable core of rustnet"
repository = "https://github.com/domcyrus/rustnet"
homepage = "https://github.com/domcyrus/rustnet"
documentation = "https://docs.rs/rustnet-core"
readme = "README.md"
license = "Apache-2.0"
keywords = ["network", "packet", "dpi", "parser", "geoip"]
categories = ["network-programming", "parser-implementations"]

[lib]
name = "rustnet_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
log = "0.4"
dashmap = "6.2"
crossbeam = "0.8"
dns-lookup = "3.0"
pnet_datalink = "0.35"
maxminddb = "0.28"
flate2 = "1"
ring = "0.17"
aes = "0.9"
