[package]
name = "rustnet-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Network analysis library: packet parsing, protocol types, deep packet inspection, link-layer parsers, connection merging, and DNS/GeoIP/OUI lookups — the reusable core of rustnet"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rustnet-core"
readme = "README.md"
license.workspace = true
keywords = ["network", "packet", "dpi", "parser", "geoip"]
categories = ["network-programming", "parser-implementations"]

[lib]
name = "rustnet_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
log.workspace = true
dashmap = "6.2"
rustc-hash = "2"
crossbeam = "0.8"
dns-lookup = "3.0"
pnet_datalink = "0.35"
maxminddb = "0.29"
flate2 = "1"
ring = "0.17"
aes = "0.9"

[features]
# Adds the Kubernetes pod/container metadata (`K8sInfo`) to `Connection`.
# Resolution itself lives in the rustnet binary; no extra dependencies.
kubernetes = []
